--- a/app/templates/cornPriceInsert.html
+++ b/app/templates/cornPriceInsert.html
@@ -4,7 +4,7 @@
 <form  style="margin:2cm 5cm 2cm 5cm;border:1px solid red" method="post">
 	<h3>玉米现货价格</h3>
 		<p>
-			<span>日期:</span><input type="text" value="20180808" name="date1" id="date1" size="10">&nbsp;&nbsp;
+			<span>日期:</span><input type="date" value="2018-08-08" name="date1" id="date1" size="10">&nbsp;&nbsp;
 			<span>黑龙江价格:</span><input type="number" value="1400" name="heiPrice" id="heiPrice" size="4">&nbsp;&nbsp;
 			<span>锦州港价格:</span><input type="number" value="1600" name="jinzhouPrice" id="jinzhouPrice" maxlength="4">
 		</p>
@@ -12,7 +12,7 @@
 
 	<h3>大豆现货价格</h3>
 		<p>
-			<span>日期:</span><input type="text" value="20180808" name="date2" id="date2" size="10">&nbsp;&nbsp;
+			<span>日期:</span><input type="date" value="2018-08-08" name="date2" id="date2" size="10">&nbsp;&nbsp;
 			<span>嫩江价格:</span><input type="number" value="3400" name="nenPrice" id="nenPrice" size="4">&nbsp;&nbsp;
 			<span>大连价格:</span><input type="number" value="3600" name="dalianPrice" id="dalianPrice" maxlength="4">
 		</p>
