mod insert price

--- a/app/templates/cornPriceInsert.html
+++ b/app/templates/cornPriceInsert.html
@@ -6,7 +6,8 @@
 		<p>
 			<span>日期:</span><input type="date" value="2018-08-08" name="date1" id="date1" size="10">&nbsp;&nbsp;
 			<span>黑龙江价格:</span><input type="number" value="1400" name="heiPrice" id="heiPrice" size="4">&nbsp;&nbsp;
-			<span>锦州港价格:</span><input type="number" value="1600" name="jinzhouPrice" id="jinzhouPrice" maxlength="4">
+			<span>锦州港价格:</span><input type="number" value="1600" name="jinzhouPrice" id="jinzhouPrice" maxlength="4"><br/>
+			<span>现状评论:</span><input type="text" value="偏强" name="pinglun" id="pinglun" maxlength="40">
 		</p>
 		<p>------------------------------------------------------</p>
 
