--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,16 +1,20 @@
 {% extends "base.html" %}
 {% block content %}
     <div align="right"><p><b>每天早晨叫醒你的不应该是闹钟，而应该是梦想！！！</b></p></div>
-
     <br>
-    <br>
-
+    <!-- ###################################################################################### -->
     <font color="red"><p><b>常用计算工具</b></p></font>
     <p>
         <a href="/cornPrice" target="_blank">玉米潮干粮价格计算</a>&nbsp;&nbsp;
-        <a href="/cornPriceInsert" target="_blank">玉米现货价格录入</a>
     </p>
-
+    <!-- <br> -->
+    <!-- ###################################################################################### -->
+    <font color="red"><p><b>分析报告系列</b></p></font>
+    <p>
+        <a href="/cornAnalysisReport" target="_blank">玉米分析报告</a>&nbsp;&nbsp;
+    </p>
+    <!-- <br> -->
+    <!-- ###################################################################################### -->
     <font color="red"><p><b>天气情况</b></p></font>
     <p>
         <a href="http://www.nmc.cn/publish/agro/disastersmonitoring/Agricultural_Drought_Monitoring.htm" target="_blank">农业干旱监测(中国)</a>&nbsp;&nbsp;
@@ -24,7 +28,8 @@
         <a href="http://water.weather.gov/precip/" target="_blank">降水量(美国)</a>&nbsp;&nbsp;
         <a href="http://sharaku.eorc.jaxa.jp/cgi-bin/amsr/elni2/elni2.cgi?lang=e" target="_blank">厄尔尼诺监测</a>
     </p>
-
+    <!-- <br> -->
+    <!-- ###################################################################################### -->
     <font color="red"><p><b>持仓情况</b></p></font>
     <p>
         <a href="http://www.dce.com.cn/dalianshangpin/xqsj/tjsj26/rtj/rcjccpm/index.html" target="_blank">大商所持仓排名</a>&nbsp;&nbsp;
@@ -34,8 +39,9 @@
         <a href="http://www.shfe.com.cn/statements/dataview.html?paramid=pm" target="_blank">上期所持仓排名</a>&nbsp;&nbsp;
         <a href="http://www.shfe.com.cn/statements/dataview.html?paramid=dailystock" target="_blank">上期所仓单日报</a>&nbsp;&nbsp;
     </p>
-
-    <font color="red"><p><b>分析报告</b></p></font>
+    <!-- <br> -->
+    <!-- ###################################################################################### -->
+    <font color="red"><p><b>第三方分析报告</b></p></font>
     <p>
         <a href="/grainReport" target="_blank">谷物报告</a>&nbsp;&nbsp;
         <a href="/oilSeedReport" target="_blank">油脂油料报告</a>&nbsp;&nbsp;
@@ -43,7 +49,8 @@
         <a href="/chemicalsReport" target="_blank">化工品报告</a>&nbsp;&nbsp;
         <a href="/otherReport" target="_blank">其他</a>
     </p>
-
+    <!-- <br> -->
+    <!-- ###################################################################################### -->
     <font color="red"><p><b>交易数据实时监控</b></p></font>
     <p>
         <a href="/StrategyTrade" target="_blank">分策略成交数据</a>&nbsp;&nbsp;
@@ -52,7 +59,14 @@
         <a href="/strategyVars" target="_blank">策略变量数据</a>&nbsp;&nbsp;
         <a href="/strategyHistoryData" target="_blank">策略历史数据</a>
     </p>
+    <!-- <br> -->
+    <!-- ###################################################################################### -->
+    <font color="red"><p><b>数据录入</b></p></font>
+    <p>
+        <a href="/cornPriceInsert" target="_blank">玉米现货价格录入</a>&nbsp;&nbsp;
+    </p>
     <br>
+    <!-- ###################################################################################### -->
     <br>
     <div align="right"><p><a href="/aboutus" target="_blank">关于我们</a></p></div>
     <div align="right"><p><a href="/temptest" target="_blank">临时测试</a></p></div>
