--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -6,6 +6,7 @@
     <font color="red"><p><b>常用计算工具</b></p></font>
     <p>
         <a href="/cornPrice" target="_blank">玉米潮干粮价格计算</a>&nbsp;&nbsp;
+        <a href="/cornbasischart" target="_blank">玉米基差走势图</a>&nbsp;&nbsp;
     </p>
     <!-- <br> -->
     <!-- ###################################################################################### -->
