--- a/app/templates/cornbasischart.html
+++ b/app/templates/cornbasischart.html
@@ -51,7 +51,7 @@
             //     
             // },
             legend: {
-                data:['2018basis1', '2017basis1', '2016basis1', '2015basis1', '2014basis1']
+                data:['2019basis1', '2018basis1', '2017basis1', '2016basis1', '2015basis1', '2014basis1']
             },
             xAxis: {
                 type:'category',
@@ -79,10 +79,15 @@
                 }
             ],
             dataset:{
-                dimensions: ['date', '2018basis1', '2017basis1', '2016basis1', '2015basis1', '2014basis1'],
+                dimensions: ['date', '2019basis1', '2018basis1', '2017basis1', '2016basis1', '2015basis1', '2014basis1'],
                 source: my_corn_year_basis1_l
             },
             series: [
+                {
+                    name: '2019basis1',
+                    type: 'line'
+                    // data: {{l4}}
+                },
                 {
                     name: '2018basis1',
                     type: 'line'
@@ -169,7 +174,7 @@
             //     
             // },
             legend: {
-                data:['2018basis5', '2017basis5', '2016basis5', '2015basis5', '2014basis5']
+                data:['2019basis5', '2018basis5', '2017basis5', '2016basis5', '2015basis5', '2014basis5']
             },
             xAxis: {
                 type:'category',
@@ -197,10 +202,15 @@
                 }
             ],
             dataset:{
-                dimensions: ['date', '2018basis5', '2017basis5', '2016basis5', '2015basis5', '2014basis5'],
+                dimensions: ['date', '2019basis5', '2018basis5', '2017basis5', '2016basis5', '2015basis5', '2014basis5'],
                 source: my_corn_year_basis5_l
             },
             series: [
+                {
+                    name: '2019basis5',
+                    type: 'line'
+                    // data: {{l4}}
+                },
                 {
                     name: '2018basis5',
                     type: 'line'
@@ -261,7 +271,7 @@
             //     
             // },
             legend: {
-                data:['2018basis9', '2017basis9', '2016basis9', '2015basis9', '2014basis9']
+                data:['2019basis9', '2018basis9', '2017basis9', '2016basis9', '2015basis9', '2014basis9']
             },
             xAxis: {
                 type:'category',
@@ -289,10 +299,15 @@
                 }
             ],
             dataset:{
-                dimensions: ['date', '2018basis9', '2017basis9', '2016basis9', '2015basis9', '2014basis9'],
+                dimensions: ['date', '2019basis9', '2018basis9', '2017basis9', '2016basis9', '2015basis9', '2014basis9'],
                 source: my_corn_year_basis9_l
             },
             series: [
+                {
+                    name: '2019basis9',
+                    type: 'line'
+                    // data: {{l4}}
+                },
                 {
                     name: '2018basis9',
                     type: 'line'
