--- a/app/templates/cornbasischart.html
+++ b/app/templates/cornbasischart.html
@@ -85,22 +85,29 @@
             series: [
                 {
                     name: '2019basis1',
-                    type: 'line'
+                    type: 'line',
+                    symbol:'rect',
+                    symbolSize:10
                     // data: {{l4}}
                 },
                 {
                     name: '2018basis1',
-                    type: 'line'
+                    type: 'line',
+                    symbol:'triangle',
+                    symbolSize:10
                     // data: {{l4}}
                 },
                 {
                     name: '2017basis1',
-                    type: 'line'
+                    type: 'line',
+                    symbol:'diamond',
+                    symbolSize:10
                     // data: {{l4s}}
                 },
                 {
                     name: '2016basis1',
-                    type: 'line'
+                    type: 'line',
+                    symbol:'none'
                     // data: {{l4s}}
                 },
                 {
