--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -7,6 +7,7 @@
     <p>
         <a href="/cornPrice" target="_blank">玉米潮干粮价格计算</a>&nbsp;&nbsp;
         <a href="/cornbasischart" target="_blank">玉米基差走势图</a>&nbsp;&nbsp;
+        <a href="/northcarryout" target="_blank">北港库存与价格</a>&nbsp;&nbsp;
     </p>
     <!-- <br> -->
     <!-- ###################################################################################### -->
