--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,13 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
-    <div align="right"><p><b>每天早晨叫醒你的不应该是闹钟，而应该是梦想！！！</b></p></div>
+    <!-- <div align="right"><p><b>每天早晨叫醒你的不应该是闹钟，而应该是梦想！！！</b></p></div> -->
     <br>
     <!-- ###################################################################################### -->
     <font color="red"><p><b>常用计算工具</b></p></font>
     <p>
         <a href="/cornPrice" target="_blank">玉米潮干粮价格计算</a>&nbsp;&nbsp;
         <a href="/cornbasischart" target="_blank">玉米基差走势图</a>&nbsp;&nbsp;
-        <a href="/northcarryout" target="_blank">北港库存与价格</a>&nbsp;&nbsp;
+        <a href="/cornspreadchart" target="_blank">玉米期货价差走势图</a>&nbsp;&nbsp;
+        <a href="/carryout" target="_blank">南北港库存与价格</a>&nbsp;&nbsp;
     </p>
     <!-- <br> -->
     <!-- ###################################################################################### -->
